# docker-python-start-point

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: codeql.yml  hadolint.yml
docker/: Dockerfile  requirements_base.txt  requirements_dev.txt  requirements_test.txt
src/: main.py
src/greetings/: public_greetings.py
syl/entrypoints/: __init__.py  app.py
syl/greetings/: __init__.py
tests/: conftest.py
tests/fixtures/: fastapi.py
tests/unit/: api_test.py  greetings_test.py
